Updating project references

--- a/src/IO.Swagger/appsettings.json
+++ b/src/IO.Swagger/appsettings.json
@@ -5,6 +5,9 @@
       "Default": "Information",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "ConnectionStrings": {
+      "MappingContext": "postgres://robzbgrz:pzTBhdLTBryMg7Y-8oDfnZ3WEHyv1ZGZ@horton.elephantsql.com:5432/robzbgrz"
     }
   }
 }
