Connect to cloud database. Initial Migration added.

--- a/src/IO.Swagger/appsettings.json
+++ b/src/IO.Swagger/appsettings.json
@@ -1,13 +1,13 @@
 {
+  "ConnectionStrings": {
+    "MappingContext": "Server=horton.elephantsql.com;Port=5432;Database=robzbgrz;User Id=robzbgrz;Password=pzTBhdLTBryMg7Y-8oDfnZ3WEHyv1ZGZ"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Information",
       "System": "Information",
       "Microsoft": "Information"
-    },
-    "ConnectionStrings": {
-      "MappingContext": "postgres://robzbgrz:pzTBhdLTBryMg7Y-8oDfnZ3WEHyv1ZGZ@horton.elephantsql.com:5432/robzbgrz"
     }
   }
 }
