--- a/src/IO.Swagger/IO.Swagger.csproj
+++ b/src/IO.Swagger/IO.Swagger.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Geocoding.Core" Version="4.0.0" />
+    <PackageReference Include="Geocoding.Google" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.0.0" />
